k8s/traefik/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: kube-system
  labels:
    app: traefik
spec:
  selector:
    app: traefik
  ports:
    - name: web
      port: 80
      targetPort: 80
  type: LoadBalancer
